# EventSoftPublic

./: .env  .gitignore  README.md  package-lock.json  package.json  worklog.md
.github/workflows/: build-tauri.yml  release-musicbingo.yml  release.yml  test-simple.yml  test-windows-build.yml  test-windows-network.yml
.kimi/: ACCESS.md  CONTEXT.md  DEPLOY.md  SELFHOSTED_LINUX_RUNNER.md  SELFHOSTED_MACOS_RUNNER.md  SELFHOSTED_WINDOWS_RUNNER.md  WINDOWS_RUNNER_AI_INSTRUCTIONS.md
apps/fastquiz/: README.md
apps/musicbingo/: README.md  eslint.config.mjs  package.json
apps/musicbingo/scripts/: build-local.sh  build-macos.sh  deploy-release.sh
apps/musicbingo/src-tauri/: Cargo.toml  tauri.conf.json
apps/musicbingo/src-tauri/icons/: icon.icns
apps/musicbingo/src-tauri/src/: license.rs  main.rs  online_license.rs
apps/musicbingo/src-tauri/src/game/: cards.rs  mod.rs  patterns.rs
apps/musicbingo/src-tauri/src/playlist/: db.rs
apps/musicbingo/src-tauri/src/server/: mod.rs  player_html.rs  routes.rs  state.rs
apps/musicbingo/src-tauri/tests/: license_integration.rs
apps/toastmachine/: README.md  next.config.ts  package.json
apps/toastmachine/src-tauri/: Cargo.toml  tauri.conf.json
apps/toastmachine/src-tauri/icons/: icon.icns
apps/toastmachine/src-tauri/src/: license.rs  license_public.pem  main.rs  online_license.rs
apps/web/: index.html  package.json  vite.config.ts
db/: custom.db
download/: license-keys.txt
keys/musicbingo/: keys.txt
keys/toastmachine/: keys.txt
license-server/: Dockerfile  docker-compose.yml  package-lock.json  package.json
license-server/nginx/: soft.eventhunt.ru.conf
license-server/public/: index.html
license-server/scripts/: init.js
license-server/src/: db.js  mailer.js  server.js
scripts/: build-macos-universal.sh  generate-keys.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: license.rs  main.rs
src-tauri/tests/: license_integration.rs
src/app/: layout.tsx  page.tsx
src/lib/: api.ts  fingerprint.ts  license.ts  sounds.ts
(+70 files in other folders)
