[package]
name = "musicbingo"
version = "0.1.0"
description = "MusicBingo — offline music bingo game for events and parties"
authors = ["EventSoft"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
once_cell = "1"
machine-uid = "0.6"
whoami = "1.5"
ureq = { version = "2", features = ["json"] }
jsonwebtoken = "9"

# HTTP server and async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Networking and QR code
local-ip-address = "0.6"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
uuid = { version = "1.9", features = ["v4", "serde"] }

[[bin]]
name = "musicbingo"
path = "src/main.rs"

[profile.release]
opt-level = 2
